Update 'z4dr1s0nm-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:0ef343125ab57b028826da2ef3b81f6bf8b4e4dd@sha256:8b1163fcf628ce10bc75cee778c27a868038e34a57537756bc6e98a5ce6b28db

--- a/components/z4dr1s0nm-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/z4dr1s0nm-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: z4dr1s0nm-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:0ef343125ab57b028826da2ef3b81f6bf8b4e4dd@sha256:8b1163fcf628ce10bc75cee778c27a868038e34a57537756bc6e98a5ce6b28db
+          name: container-image
